# tini

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  README.md  README_zh.md  Taskfile.yml
.github/workflows/: release.yml  test.yml
cmake/: GitVersion.cmake  OptionVariables.cmake  ProjectConfig.cmake  ProjectIsTopLevel.cmake
example/: CMakeLists.txt  sample.c  sample_cpp.cpp  tinix.c
include/tini/: tini.h
src/: core.c  internal.h  key.c  section.c  tini.c  utils.c
test/: CMakeLists.txt  common.hpp  test_common.h  test_cpp.cpp  test_edge_cases.c  test_edge_cases.cpp  test_error_handling.c  test_error_handling.cpp  test_iterator.c  test_iterator.cpp  test_key_api.c  test_key_api.cpp  test_lifecycle.c  test_lifecycle.cpp  test_parser.c  test_parser.cpp  test_section_api.c  test_section_api.cpp  test_serializer.c  test_serializer.cpp  test_value_getter.c  test_value_getter.cpp
test/res/: basic.ini  comments.ini  duplicate.ini  escape.ini  global_keys.ini  malformed.ini  quotes.ini  sections_only.ini  special_chars.ini  unicode.ini  whitespace.ini
